--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 .list-group-item.active{background-color:#9397ad;border-color:#9397ad;}
 .list-group-item.active:hover{background-color:#625d63;border-color:#625d63;}
 .cor{background-color: #e9e9e9;}
-.busca{padding-top: 40px;}
+.busca{padding-top: 40px;padding-bottom: 40px;}
 .texto{font-size: 38px; color: #787878;}
 .navi{background-color: #e1e1e1;}
 body { padding-top: 50px;}
